src/App.css
body {
    background-color: #133667;
    color: white;
    text-align: center;
    background-size: cover;
}

.logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 20%;
  margin-top: 20px;
}

.input-icon {
  position: absolute;
  color: black;
  font-size: 25px;
  padding-left: 10px;
  padding-top: 7px;
}

input {
  padding: 10px;
  padding-left: 35px !important;
  border-radius: 4px;
  border: 10px;
  width: 230px;
  height: 20px;
  font-size: 16px;
  max-width: fit-content;
}

.Results {
  width: 75%;
  height: 400px;
  border-radius: 20px;
  background-repeat: no-repeat;
  background-size: cover;
}

.weather-container {
  margin: 0 auto;
  color: #fff;
  text-align: center;
  display: flex;
  align-items: center;
}

.icon {
  position: relative;
  display: inline-block;
  width: 12em;
  height: 10em;
  font-size: 1em; /* control icon size here */
}

.cloud {
  position: absolute;
  z-index: 1;
  top: 50%;
  left: 50%;
  width: 3.6875em;
  height: 3.6875em;
  margin: -1.84375em;
  background: currentColor;
  border-radius: 50%;
  box-shadow:
    -2.1875em 0.6875em 0 -0.6875em,
    2.0625em 0.9375em 0 -0.9375em,
    0 0 0 0.375em #161616,
    -2.1875em 0.6875em 0 -0.3125em #161616,
    2.0625em 0.9375em 0 -0.5625em #161616;
}
.cloud:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: -0.5em;
  display: block;
  width: 4.5625em;
  height: 1em;
  background: currentColor;
  box-shadow: 0 0.4375em 0 -0.0625em #161616;
}
.cloud:nth-child(2) {
  z-index: 0;
  background: #161616;
  box-shadow:
    -2.1875em 0.6875em 0 -0.6875em #161616,
    2.0625em 0.9375em 0 -0.9375em #161616,
    0 0 0 0.375em #161616,
    -2.1875em 0.6875em 0 -0.3125em #161616,
    2.0625em 0.9375em 0 -0.5625em #161616;
  opacity: 0.3;
  transform: scale(0.5) translate(6em, -3em);
  animation: cloud 4s linear infinite;
}
.cloud:nth-child(2):after { background: #161616; }

.sun {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 2.5em;
  height: 2.5em;
  margin: -1.25em;
  background: currentColor;
  border-radius: 50%;
  box-shadow: 0 0 0 0.375em #161616;
  animation: spin 12s infinite linear;
}
.rays {
  position: absolute;
  top: -2em;
  left: 50%;
  display: block;
  width: 0.375em;
  height: 1.125em;
  margin-left: -0.1875em;
  background: #161616;
  border-radius: 0.25em;
  box-shadow: 0 5.375em #161616;
}
.rays:before,
.rays:after {
  content: '';
  position: absolute;
  top: 0em;
  left: 0em;
  display: block;
  width: 0.375em;
  height: 1.125em;
  transform: rotate(60deg);
  transform-origin: 50% 3.25em;
  background: #161616;
  border-radius: 0.25em;
  box-shadow: 0 5.375em #161616;
}
.rays:before {
  transform: rotate(120deg);
}
.cloud + .sun {
  margin: -2em 1em;
}

.rain,
.lightning,
.snow {
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 50%;
  width: 3.75em;
  height: 3.75em;
  margin: 0.375em 0 0 -2em;
  background: currentColor;
}

.rain:after {
  content: '';
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 50%;
  width: 1.125em;
  height: 1.125em;
  margin: -1em 0 0 -0.25em;
  background: #0cf;
  border-radius: 100% 0 60% 50% / 60% 0 100% 50%;
  box-shadow:
    0.625em 0.875em 0 -0.125em rgba(255,255,255,0.2),
    -0.875em 1.125em 0 -0.125em rgba(255,255,255,0.2),
    -1.375em -0.125em 0 rgba(255,255,255,0.2);
  transform: rotate(-28deg);
  animation: rain 3s linear infinite;
}

.bolt {
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -0.25em 0 0 -0.125em;
  color: #161616;
  opacity: 0.3;
  animation: lightning 2s linear infinite;
}
.bolt:nth-child(2) {
  width: 0.5em;
  height: 0.25em;
  margin: -1.75em 0 0 -1.875em;
  transform: translate(2.5em, 2.25em);
  opacity: 0.2;
  animation: lightning 1.5s linear infinite;
}
.bolt:before,
.bolt:after {
  content: '';
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 50%;
  margin: -1.625em 0 0 -1.0125em;
  border-top: 1.25em solid transparent;
  border-right: 0.75em solid;
  border-bottom: 0.75em solid;
  border-left: 0.5em solid transparent;
  transform: skewX(-10deg);
}
.bolt:after {
  margin: -0.25em 0 0 -0.25em;
  border-top: 0.75em solid;
  border-right: 0.5em solid transparent;
  border-bottom: 1.25em solid transparent;
  border-left: 0.75em solid;
  transform: skewX(-10deg);
}
.bolt:nth-child(2):before {
  margin: -0.75em 0 0 -0.5em;
  border-top: 0.625em solid transparent;
  border-right: 0.375em solid;
  border-bottom: 0.375em solid;
  border-left: 0.25em solid transparent;
}
.bolt:nth-child(2):after {
  margin: -0.125em 0 0 -0.125em;
  border-top: 0.375em solid;
  border-right: 0.25em solid transparent;
  border-bottom: 0.625em solid transparent;
  border-left: 0.375em solid;
}

.flake:before,
.flake:after {
  content: '\2744';
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -1.025em 0 0 -1.0125em;
  color: #161616;
  list-height: 1em;
  opacity: 0.2;
  animation: spin 8s linear infinite reverse;
}
.flake:after {
  margin: 0.125em 0 0 -1em;
  font-size: 1.5em;
  opacity: 0.4;
  animation: spin 14s linear infinite;
}
.flake:nth-child(2):before {
  margin: -0.5em 0 0 0.25em;
  font-size: 1.25em;
  opacity: 0.2;
  animation: spin 10s linear infinite;
}
.flake:nth-child(2):after {
  margin: 0.375em 0 0 0.125em;
  font-size: 2em;
  opacity: 0.4;
  animation: spin 16s linear infinite reverse;
}


/* Animations */ 

@keyframes spin {
  100% { transform: rotate(360deg); }
}

@keyframes cloud {
  0% { opacity: 0; }
  50% { opacity: 0.3; }
  100% {
    opacity: 0;
    transform: scale(0.5) translate(-200%, -3em);
  }
}

@keyframes rain {
  0% {
    background: #0cf;
    box-shadow:
      0.625em 0.875em 0 -0.125em rgba(255,255,255,0.2),
      -0.875em 1.125em 0 -0.125em rgba(255,255,255,0.2),
      -1.375em -0.125em 0 #0cf;
  }
  25% {
    box-shadow:
      0.625em 0.875em 0 -0.125em rgba(255,255,255,0.2),
      -0.875em 1.125em 0 -0.125em #0cf,
      -1.375em -0.125em 0 rgba(255,255,255,0.2);
  }
  50% {
    background: rgba(255,255,255,0.3);
    box-shadow:
      0.625em 0.875em 0 -0.125em #0cf,
      -0.875em 1.125em 0 -0.125em rgba(255,255,255,0.2),
      -1.375em -0.125em 0 rgba(255,255,255,0.2);
  }
  100% {
    box-shadow:
      0.625em 0.875em 0 -0.125em rgba(255,255,255,0.2),
      -0.875em 1.125em 0 -0.125em rgba(255,255,255,0.2),
      -1.375em -0.125em 0 #0cf;
  }
}

@keyframes lightning {
  45% {
    color: #fff;
    background: #fff;
    opacity: 0.2;
  }
  50% {
    color: #0cf;
    background: #0cf;
    opacity: 1;
  }
  55% {
    color: #fff;
    background: #fff;
    opacity: 0.2;
  }
}

@media (max-width: 750px) {
  .Results {
    margin-left: 20%;
    margin-right: 20%;
  }
}

.weather-map {
  width: 32%;
  margin-left: 20px;
}






.weather-cotainer-left{
  width: 30%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 70px;
  margin-left: 90px;
}

.weather-status{
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 90px;

}

.weather-status p {
  font-size: 2.5rem;
}


#temp{
  margin: 0;padding: 0;
  font-size: 6rem;
  font-weight: 250;
}

.weather-cotainer-right{
  width: 70%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-left: 150px;
  margin-top: 70px;
}

.weather-infos{
  width: 50%;
  height: max-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  text-align: start;
  margin-bottom: 50px;
}

.weather-info-heading{
  font-size: 2.5rem;
  font-weight: 250;
  text-align: start;
  margin: 0;padding: 0;
}

.weather-info-values{
  font-size: 2rem;
  font-weight: 250;
  text-align: start;
  margin: 0;padding: 0;
  margin-top: 20px;
}

.Results-overlay{
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.303);
  border-radius: inherit;
}

.weather-map-container{
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
}
.weather-map-container-wrapper{
  display: flex;
  width: 90%;
}


.Items-to-bring{
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-top: 80px;
}

.Items-to-bring h2{
  font-size: 3rem;
  margin-bottom: 50px;
}

.Items-box{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  margin-bottom: 100px;
  margin-top: 50px;
}

.Item-container{
  display: flex;
  flex-direction: column;
  width: 300px;
  height: max-content;
  padding-top: 50px;
  padding-bottom: 50px;
  background-color: rgb(237, 237, 237);
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  box-shadow: 0px 0px 30px #737171;
}

.Item-container:hover{
  transition: all 0.3s ease;
  transform: scale(1.1);
}

.Item-container img{
  width: 150px;
}

.Item-container p{
  font-size: 2.5rem;
  font-weight: bold;
  color: black;
}

